// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots renders a button with no type defined 1`] = `
.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #f0f1f2;
  border-color: transparent;
  color: #333333;
  min-width: 96px;
  height: 40px;
  padding: 0 16px;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-2 .button-label-data {
  color: #333333;
}

.emotion-2:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #333333;
}

.emotion-2:focus span .wd-icon-fill,
.emotion-2:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover:focus {
  background-color: #dfe2e6;
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #333333;
}

.emotion-2:active span .wd-icon-fill,
.emotion-2:focus:active span .wd-icon-fill,
.emotion-2:hover:active span .wd-icon-fill,
.emotion-2:active span .wd-icon-accent,
.emotion-2:focus:active span .wd-icon-accent,
.emotion-2:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #333333;
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #a1aab3;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-2:disabled .button-label-data,
.emotion-2:active:disabled .button-label-data,
.emotion-2:focus:disabled .button-label-data,
.emotion-2:hover:disabled .button-label-data {
  color: #a1aab3;
}

.emotion-2:not([disabled]):focus {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-2:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<button
  className="emotion-2 emotion-3"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button
  </span>
</button>
`;

exports[`Button Snapshots renders a growing button 1`] = `
.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #f0f1f2;
  border-color: transparent;
  color: #333333;
  min-width: 96px;
  height: 40px;
  padding: 0 16px;
  width: 100%;
  max-width: 100%;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-2 .button-label-data {
  color: #333333;
}

.emotion-2:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #333333;
}

.emotion-2:focus span .wd-icon-fill,
.emotion-2:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover:focus {
  background-color: #dfe2e6;
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #333333;
}

.emotion-2:active span .wd-icon-fill,
.emotion-2:focus:active span .wd-icon-fill,
.emotion-2:hover:active span .wd-icon-fill,
.emotion-2:active span .wd-icon-accent,
.emotion-2:focus:active span .wd-icon-accent,
.emotion-2:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #333333;
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #a1aab3;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-2:disabled .button-label-data,
.emotion-2:active:disabled .button-label-data,
.emotion-2:focus:disabled .button-label-data,
.emotion-2:hover:disabled .button-label-data {
  color: #a1aab3;
}

.emotion-2:not([disabled]):focus {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-2:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

<button
  className="emotion-2 emotion-3"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button
  </span>
</button>
`;

exports[`Button Snapshots renders as expected 1`] = `
.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #f0f1f2;
  border-color: transparent;
  color: #333333;
  min-width: 96px;
  height: 40px;
  padding: 0 16px;
}

.emotion-2:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-2:disabled,
.emotion-2:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-2 span .wd-icon-fill,
.emotion-2 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-2 .button-label-data {
  color: #333333;
}

.emotion-2:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #333333;
}

.emotion-2:focus span .wd-icon-fill,
.emotion-2:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover:focus {
  background-color: #dfe2e6;
}

.emotion-2:active,
.emotion-2:focus:active,
.emotion-2:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #333333;
}

.emotion-2:active span .wd-icon-fill,
.emotion-2:focus:active span .wd-icon-fill,
.emotion-2:hover:active span .wd-icon-fill,
.emotion-2:active span .wd-icon-accent,
.emotion-2:focus:active span .wd-icon-accent,
.emotion-2:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #333333;
}

.emotion-2:hover span .wd-icon-fill,
.emotion-2:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-2:disabled,
.emotion-2:active:disabled,
.emotion-2:focus:disabled,
.emotion-2:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #a1aab3;
}

.emotion-2:disabled span .wd-icon-fill,
.emotion-2:active:disabled span .wd-icon-fill,
.emotion-2:focus:disabled span .wd-icon-fill,
.emotion-2:hover:disabled span .wd-icon-fill,
.emotion-2:disabled span .wd-icon-accent,
.emotion-2:active:disabled span .wd-icon-accent,
.emotion-2:focus:disabled span .wd-icon-accent,
.emotion-2:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-2:disabled .button-label-data,
.emotion-2:active:disabled .button-label-data,
.emotion-2:focus:disabled .button-label-data,
.emotion-2:hover:disabled .button-label-data {
  color: #a1aab3;
}

.emotion-2:not([disabled]):focus {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-2:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<button
  className="emotion-2 emotion-3"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button
  </span>
</button>
`;
